[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commentworks"
version = "0.1.0-alpha"
description = "Privacy-first local AI for analyzing open-ended survey comments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "CommentWorks Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/[username]/commentworks"
Issues = "https://github.com/[username]/commentworks/issues"
